--- a/R1/b/b1-3in.html
+++ b/R1/b/b1-3in.html
@@ -7,8 +7,11 @@
   <body>
     <h1>{title}</h1>
     <form action="/" method="post">
-      <label for="event_id">id</label>
-      <input type="text" name="event_id" id="event_id" />
+      <select name="id">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+      </select>
       <input type="submit" />
     </form>
   </body>
