--- a/R1/b/b1-3out.html
+++ b/R1/b/b1-3out.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>イベント詳細</h1>
-    <span>イベント名: {name}</span>
-    <span>場所: {location}</span>
-    <span>時期: {date}</span>
+    <span>イベント名: {name}<br /></span>
+    <span>場所: {location}<br /></span>
+    <span>時期: {date}<br /></span>
   </body>
 </html>
