--- a/R1/b/b1-1.html
+++ b/R1/b/b1-1.html
@@ -6,9 +6,34 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>イベント詳細</h1>
-    <span>イベント名: {name}</span>
-    <span>場所: {location}</span>
-    <span>時期: {date}</span>
+    <h1>イベント</h1>
+    <table border="1">
+      <tr>
+        <th>ID</th>
+        <th>イベント名</th>
+        <th>場所</th>
+        <th>時期</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>新歓</td>
+        <td>三田駅近くの居酒屋</td>
+        <td>2024/4/4</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>誕生日会</td>
+        <td>友達の家</td>
+        <td>2024/4/8</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>
+          <font color="red">勉強会</font>
+        </td>
+        <td>Hack Bar</td>
+        <td>2024/5/6</td>
+      </tr>
+    </table>
   </body>
 </html>
